[project]
name = "openenv-incident-env"
version = "0.1.0"
description = "OpenEnv Incident Response Environment"
authors = [
  { name = "Ritika Jain" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "requests",
  "openenv"
]

[project.scripts]
server = "app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.openenv]
version = "0.2.0"